# security-monitor

./: .gitignore  README.md  monitor_system.py  requirements-api.txt  requirements.txt  run_ros2_node.sh  standalone_api_server.py  standalone_api_server_ml.py  start_api_server.sh
docs/: API_INTEGRATION_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT_ROADMAP.md  USER_GUIDE.md
examples/: api_usage_example.py
models/pointpillars/: README.md
models/yolo/: README.md
scenarios/carla/: highway_scenario.py
scenarios/gazebo/: urban_scenario.py
scripts/: benchmark.sh  demo_ml_integration.sh  deploy.sh  download_models.sh  install_dependencies.sh  run_tests.sh  start_api_server.sh
security-dashboard/: package-lock.json  package.json
security-dashboard/src/app/: page.tsx
security-dashboard/src/types/: api.ts
src/hazard_detection/: CMakeLists.txt  README.md  package.xml
src/hazard_detection/config/: hazard_config.yaml
src/hazard_detection/hazard_detection/: __init__.py  hazard_detector.py  sensor_monitor.py
src/hazard_detection/launch/: hazard_monitor.launch.py
src/security_monitor/: CMakeLists.txt  README.md  package.xml
src/security_monitor/config/: security_config.yaml
src/security_monitor/launch/: analytics_system.launch.py  api_server.launch.py  complete_system.launch.py  enhanced_system.launch.py  ml_integration.launch.py  security_monitor.launch.py
src/security_monitor/security_monitor/: __init__.py  analytics.py  api_client.py  data_logger.py  emergency_handler.py  enhanced_sensor_simulator.py  error_handler.py  final_integration.py  health_monitor.py  ml_detector.py.backup  ml_detector_simple.py  model_manager.py  notification_system.py  optimizer.py  performance_monitor.py  security_detector.py  sensor_fusion.py  sensor_simulator.py  threat_classifier.py  weather_monitor.py
src/security_monitor/security_monitor/api/: __init__.py  models.py  server.py
src/simulation/: CMakeLists.txt  package.xml
src/simulation/simulation/: __init__.py  carla_interface.py
tests/: test_integration.py  test_ml_integration.py  test_ml_integration_real.py  test_security_detector.py
web_dashboard/: app.py
web_dashboard/templates/: dashboard.html
